# iv

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSES.md  PLAN.md  README.md  build.rs
.githooks/: pre-commit
.github/: copilot-instructions.md
benchmarks/load/: 2026-05-03_u-photos-2025-12_release_grid_log.json
examples/: bench.rs  exif_diag.rs  heif_brands.rs
iv-thumb/: Cargo.toml  LICENSE
iv-thumb/src/: main.rs
locales/: en.yml
ref/: enumerator.rs  folder_view.rs  image_loading.rs  lib.rs  pipeline.rs  scheduler.rs
scripts/: package-portable.ps1
src/: app.rs  decode.rs  develop.rs  enumerator.rs  ffmpeg_wrapper.c  folder_tree.rs  folder_view.rs  grid.rs  grid_view.rs  heif_wrapper.c  image_view.rs  launcher.rs  lib.rs  libraw_wrapper.c  load_bench.rs  main.rs  media.rs  scheduler.rs
tests/common/: mod.rs
tools/: bench.rs  lint_i18n.rs  load_bench.rs
vcpkg-overlay/libheif/: portfile.cmake  vcpkg.json
