[workspace]
# iv-thumb is deliberately NOT a workspace member: it links GPL-licensed x265
# (via libheif[core,aom,x265]) and must build with its own vcpkg tree so that
# the MIT-licensed `iv` binary is never statically linked against x265.
# See iv-thumb/LICENSE for details. Build iv-thumb with:
#   cargo build --manifest-path iv-thumb/Cargo.toml
exclude = ["iv-thumb"]

[package]
name = "iv"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "iv"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff", "bmp"] }
kamadak-exif = "0.6"
zune-jpeg = "0.5"
zune-core = "0.5"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
log = "0.4"
env_logger = "0.11"
rust-i18n = "3"
libheif-rs = { version = "2.7", default-features = false, features = ["image", "v1_17"] }

[dev-dependencies]
tempfile = "3"

# Optimize dependencies even in debug builds — image decoding is 20-50x
# slower without this. Our own code stays unoptimized for debugging.
[profile.dev.package."*"]
opt-level = 2

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2026.01.16"
install = ["libheif[core,aom]"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
